E1-404 text alignment fix ar
E1-404 text alignment fix ar

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -3231,6 +3231,7 @@
       }
 
       .icon-checkbox-platinum {
+        padding-left: toRem(8);
           @include rtlBlock {
             margin-left: toRem(24);
             margin-right: 0;
